# ytfilter

./: .gitignore  Cargo.toml  HighlightsParser.slnx  Makefile  README.md
.devcontainer/: Dev.dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: dotnet-format.yml  run-ytfilter.yml  rust-tests.yml
HighlightsParser/: Program.cs
HighlightsParser/configs/: ImportEnv.cs
HighlightsParser/entry/: Contents.cs  JsonHelper.cs
HighlightsParser/models/: EntryInfo.cs  MediaCommunityInfo.cs  MediaGroupInfo.cs  StarRatingInfo.cs  StatisticsInfo.cs
HighlightsParser/request/: GetRequest.cs
HighlightsParser/response/: EntryContents.cs  EntryField.cs  EntryParseWrapper.cs  TopLevel.cs
HighlightsParser/xml/: Request.cs  XmlNamespaces.cs
data/: .gitignore  channels_example.json  example.env  filters_example.json
setup/: example.env
src/: lib.rs  main.rs
src/configs/: channel_setup.rs  env.rs  json.rs  mod.rs  observability.rs
src/configs/db/: mod.rs  mongo_setup.rs
src/data/: request.rs
src/data_layer/: request.rs  response.rs
src/data_layer/db/: mongo.rs
src/filter/: title.rs
src/logic_layer/: mod.rs
src/logic_layer/abstractions/: wrapper.rs
src/logic_layer/filter/: title.rs
src/models/: channel_id.rs  entry.rs  filters.rs  mod.rs  video_entry.rs
src/models/db/: mod.rs  mongo_connection.rs
src/models/media/: community.rs  content.rs  group.rs  mod.rs  star_rating.rs  statistics.rs
src/models/response/: entry.rs  feed.rs
tests/: create_video_entries_test.rs  import_json_test.rs
ytfilter/: Cargo.toml
