[package]
name = "ytfilter"
version = "0.2.2"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.31"
mongodb = "3.3.0"
quick-xml = { version = "0.38.3", features = ["serialize"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.23.0"
serde_json = "1.0.145"
