[package]
name = "ytfilter"
version = "0.2.2"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.31"
mongodb = "3.3.0"
quick-xml = { version = "0.38.3", features = ["serialize"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["std"] }
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "registry",
    "std",
    "fmt",
] }
#logs, tonic 0.13.1 causes breaking changes, can't update following
tonic = { version = "0.13.1", features = ["tls-native-roots", "gzip"] }
opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio", "logs"] }
opentelemetry-otlp = { version = "0.30.0", features = [
    "grpc-tonic",
    "gzip-tonic",
    "tls-roots",
    "logs",
] }
opentelemetry-resource-detectors = "0.9.0"
opentelemetry-appender-tracing = "0.30.1"


[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.23.0"
serde_json = "1.0.145"
